--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,4 +13,5 @@
 --- July 12 / 18 ---
 : Fixed username to go with prompt
 : Not tested yet
+: Added a bootleg contact system
 ------------------------------------------
